# max-overtime

./: .dockerignore  .gitignore  Dockerfile  README.md  lab-notebook.md  plan.md  pyproject.toml  render.yaml  run.py
app/: __init__.py  layout.py
app/callbacks/: export.py  language.py  navigation.py  plot.py  processing.py  upload.py
app/components/: navbar.py  plot_section.py  tutorial.py  upload_section.py  variant_table.py
assets/: app.css  custom.css
src/i18n/: __init__.py  translations.py
src/parsers/: __init__.py  common.py  maf.py  tsv.py  vcf.py
src/processing/: export.py  merge.py
tests/: conftest.py  test_three_timepoints.py
tests/data/: tp1_diagnosis.tsv  tp2_post_induction.tsv  tp3_relapse.tsv
tests/test_parsers/: test_maf.py  test_tsv.py  test_vcf.py
