[project]
name = "maxovertime"
version = "2.0.0"
description = "Track variant allele frequency (VAF) changes across multiple timepoints"
requires-python = ">=3.11"
dependencies = [
    "dash>=2.18",
    "dash-bootstrap-components>=1.6",
    "plotly>=5.24",
    "polars>=1.0",
    "kaleido>=0.2",
    "openpyxl>=3.1",
    "xlsxwriter>=3.2",
]

[project.optional-dependencies]
vcf = ["cyvcf2>=0.31"]
dev = ["pytest>=8.0", "ruff>=0.8"]

[tool.hatch.build.targets.wheel]
packages = ["src", "app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
